# Aber-Uni-Major-Project

./: README.md
MAVLink/demo/: Makefile  mavlink_serial.cpp  mavlink_socket.cpp  send_socket_commands.cpp
RasPiTresholdDemo/C++/: CMakeLists.txt  basic.cpp
RasPiTresholdDemo/Python/: simple.py
RasPiTresholdDemo/Raspicam/: CMakeLists.txt  PotentialLine.cpp  PotentialLine.h  PotentialPoint.cpp  PotentialPoint.h  Target.cpp  Target.h  basic.cpp
TargetIdentification/: .cproject  .project  CMakeLists.txt  PotentialLine.cpp  PotentialLine.h  PotentialPoint.cpp  PotentialPoint.h  Target.cpp  Target.h  Tracking.cpp  Tracking.h  main.cpp  rasbpi.cpp
