cmake_minimum_required (VERSION 2.8) 
project (Basic)
SET(CMAKE_MODULE_PATH ${CMAKE_INSTALL_PREFIX}/lib/cmake/ )
find_package(raspicam REQUIRED)
find_package( OpenCV REQUIRED )
#include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Basic basic.cpp )
target_link_libraries( Basic ${raspicam_CV_LIBS} )